<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">Confidant</string>
    <string name="loading">loading...</string>
    <string name="apploading">loading...</string>
    <string name="news">Chats</string>
    <string name="file_">Files</string>
    <string name="contacts">Contacts</string>
    <string name="my">Me</string>
    <string name="loginScanTips">Click here to scan the circle’s QR code.</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Please_type_your_username_here">Please type your username here</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="fingerprint_success">Fingerprint recognized.</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again.</string>
    <string name="choose_finger_dialog_title">Use the fingerprint to continue.</string>
    <string name="unlock_wallet">UNLOCK WALLET</string>
    <string name="back_btn">BACK</string>
    <string name="cancel_btn_dialog">Cancel</string>
    <string name="ErrorHwUnavailable_warning">The number of mistakes is too much, and try again later.</string>
    <string name="AcquiredToSlow_warning">try again</string>
    <string name="Fingerprint_init_failed_Try_again">Fingerprint init failed! Try again!</string>
    <string name="No_fingerprints_do_you_want_to_set_them_up">No fingerprints, do you want to set them up?</string>
    <string name="details">Details</string>
    <string name="Settings">Settings</string>
    <string name="MyQRCode">My QR Code</string>
    <string name="Exportaccount">Export account</string>
    <string name="help">Help</string>
    <string name="shareApp">Share App</string>
    <string name="shareContact">Share Contact</string>
    <string name="collection">Save</string>
    <string name="routerManagement">Manage Circles</string>
    <string name="addRecentStatus">Add to my status</string>
    <string name="qr_code_business_card">Invitation QR Code</string>
    <string name="search">Search</string>
    <string name="Permission_Requeset">Permission Requeset</string>
    <string name="We_Need_Some_Permission_to_continue">We Need Some Permission to continue</string>
    <string name="permission_denied">permission denied</string>
    <string name="close">close</string>
    <string name="open_folder">open folder</string>
    <string name="ok_btn_dialog">OK</string>
    <string name="result">result</string>
    <string name="cancel">Cancel</string>
    <string name="Agree">Agree</string>
    <string name="Reject">Reject</string>
    <string name="please_type_your_username">please type your username</string>
    <string name="please_type_your_password">please type your password</string>
    <string name="save_to_phone_success">save to phone success</string>
    <string name="save_picture">save picture</string>
    <string name="skip">skip</string>
    <string name="save_success">save success</string>
    <string name="Avatar_Update_Successful">success</string>
    <string name="success">success</string>
    <string name="Name_not_changed">Name not changed</string>
    <string name="file_hasnot_changed">file hasn\'t changed</string>
    <string name="fail">fail</string>
    <string name="Failedmail">Failed to get mail</string>
    <string name="Alreadyagoodfriend">Already a good friend</string>
    <string name="refuse">Decline</string>
    <string name="accept">Accept</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to record</string>
    <string name="release_to_send">Release to send</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Album</string>
    <string name="attach_take_pic">Camera</string>
    <string name="attach_location">Location</string>
    <string name="attach_Short_video">Short Video</string>
    <string name="attach_video">Video</string>
    <string name="attach_Meeting">Meetting</string>
    <string name="attach_Video_call">Video call</string>
    <string name="attach_file">File</string>
    <string name="attach_Privatefile">Private</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Release to send \n Slide up to cancel</string>
    <string name="release_to_cancel">Release to cancel</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="Importing_users">Importing users</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="reply">Reply</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="ok">OK</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="dynamic_expression">[Dynamic expression]</string>
    <string name="voice_prefix">[Voice]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="video_call">[Video call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="shake">Shake</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="book_black">Black list</string>
    <string name="session">Conversation</string>
    <string name="address_book">Address book</string>
    <string name="setting">Settings</string>
    <string name="now_refresh_list">Refreshing contact list</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="group_chat">Group Chats</string>
    <string name="add_friend">Add friends</string>
    <string name="black_item">Black list</string>
    <string name="diagnose">Diagnose</string>
    <string name="push_nick">IOS offline push nick</string>
    <string name="Current_version">Current version</string>
    <string name="version">Version:</string>
    <string name="Build">Build:</string>
    <string name="Not_Set">Not set</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="group_name">Group name</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Open_group_chat">Public group</string>
    <string name="blacklist">Black list</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
    <string name="Shielding_of_the_message">Block message</string>
    <string name="Select_the_contact">Select the contact</string>
    <string name="Group_chat_information">The group description</string>
    <string name="Group_of_Lord">The group owner</string>
    <string name="Introduction">Brief</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="LoginAdmin">Log in</string>
    <string name="Administrator_account">Administrator’s account</string>
    <string name="Modify_Activation_Code">Modify Activation Code</string>
    <string name="Modify_Router_Password">Modify node Password</string>
    <string name="Routerpassword">Node Password</string>
    <string name="Activationcode">Activation code</string>
    <string name="User_QR_Code">User\'s QR Code</string>
    <string name="Addnickname">nickname</string>
    <string name="Inputnickname">Input nickname</string>
    <string name="rename">Rename</string>
    <string name="your_hard_disk_has_been_n_formatted">Your hard disk has been   formatted</string>
    <string name="please_reboot_your_router">Please reboot your circle</string>
    <string name="reboot">Reboot</string>
    <string name="Create_a_Group">New Chat</string>
    <string name="Create_a_Group_sub">Create a group to share ideas with more friends</string>
    <string name="New_Email">New Email</string>
    <string name="Communication">Communication via Email adress</string>
    <string name="Scan_to_add_contacts">Scan QR Code</string>
    <string name="Scan_to_add_contacts_code">Add contacts, join a circle or activate a Station</string>
    <string name="Share_My_Contact_Card">Share My Contact Card</string>
    <string name="Scan_my_Contact_Card_QR_Code">Scan my Contact Card QR Code</string>
    <string name="Invite_you_friends_to_join_a_group_chat">Invite your friends to join the circle</string>
    <string name="QQMAILBOX">QQMailbox</string>
    <string name="QQ">QQMail</string>
    <string name="wangyi">163Mail</string>
    <string name="Google">Gmail</string>
    <string name="outlook">Outlook, Hotmail, Live</string>
    <string name="Invite_Friends_to_Confidant">Invite Friends to Confidant</string>
    <string name="Add_Members">Add Members</string>
    <string name="album_encryption">Encrypted Album</string>
    <string name="Create_Folder">Create Folder</string>
    <string name="Select">Select</string>
</resources>