<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.stratagile.pnrouter.entity.MenuItemView
        android:id="@+id/qqCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_menu_item"
        app:itemSrc="@mipmap/email_icon_qqmailbox"
        app:itemText="@string/QQMAILBOX"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/x110"
        android:background="@color/color_ebebeb"
        android:layout_height="@dimen/x1" />
    <com.stratagile.pnrouter.entity.MenuItemView
        android:id="@+id/qq"
        android:paddingLeft="@dimen/x10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_menu_item"
        app:itemSrc="@mipmap/email_icon_qq"
        app:itemText="@string/QQ"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/x110"
        android:background="@color/color_ebebeb"
        android:layout_height="@dimen/x1" />
    <com.stratagile.pnrouter.entity.MenuItemView
        android:id="@+id/wangyi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_menu_item"
        app:itemSrc="@mipmap/email_icon_163"
        app:itemText="@string/wangyi"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/x110"
        android:background="@color/color_ebebeb"
        android:layout_height="@dimen/x1" />
    <com.stratagile.pnrouter.entity.MenuItemView
        android:id="@+id/gmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_menu_item"
        app:itemSrc="@mipmap/email_icon_google"
        app:itemText="@string/Google"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/x110"
        android:background="@color/color_ebebeb"
        android:layout_height="@dimen/x1" />
    <com.stratagile.pnrouter.entity.MenuItemView
        android:id="@+id/outlook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_menu_item"
        app:itemSrc="@mipmap/email_icon_outlook"
        app:itemText="@string/outlook"/>
    />

</LinearLayout>
</android.support.v4.widget.NestedScrollView>