<?xml version="1.0" encoding="utf-8"?>
<com.mcxtzhang.swipemenulib.SwipeMenuLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menuRoot"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:paddingBottom="1dp"
    app:ios="false"
    app:leftSwipe="true"
    app:swipeEnable="true">

    <com.stratagile.pnrouter.view.DrawableNodeMenuEnTextView
        android:id="@+id/menuItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x150"
        app:srcmy="@mipmap/folder"
        app:textmy="@string/album_encryption">
    </com.stratagile.pnrouter.view.DrawableNodeMenuEnTextView>

    <!-- 以下都是侧滑菜单的内容依序排列 -->
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="80dp"
        android:layout_height="@dimen/x150"
        android:background="#FF5956"
        android:clickable="true"
        android:text="@string/delete"
        android:textAllCaps = "false"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnRename"
        android:layout_width="80dp"
        android:layout_height="@dimen/x150"
        android:background="#6646F7"
        android:textAllCaps = "false"
        android:text="@string/rename"
        android:textColor="@android:color/white"/>

</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
