<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loading"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:background="@color/color_f2f2f2"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/custom_image"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:visibility="gone"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:textColor="#575757"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/Addnickname" />

    <EditText
        android:id="@+id/content_text"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/Inputnickname"
        android:minHeight="@dimen/x100"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        android:textSize="14sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_marginTop="@dimen/x40"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/x20"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0px"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/mainColor"
            android:layout_height="31dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:text="Cancel" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="20dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/mainColor"
            android:layout_height="31dp"
            android:textAllCaps="false"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>