<?xml version="1.0" encoding="utf-8"?>
<com.mcxtzhang.swipemenulib.SwipeMenuLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menuRoot"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:paddingBottom="1dp"
    app:ios="false"
    app:leftSwipe="true"
    app:swipeEnable="true">

    <com.stratagile.pnrouter.view.DrawableEnTextView
        android:id="@+id/menuItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x150"
        app:srcmy="@mipmap/folder"
        app:textmy="@string/album_encryption">
    </com.stratagile.pnrouter.view.DrawableEnTextView>

    <!-- 以下都是侧滑菜单的内容依序排列 -->
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="80dp"
        android:layout_height="@dimen/x150"
        android:background="#FF5956"
        android:clickable="true"
        android:text="@string/delete"
        android:textAllCaps = "false"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnRename"
        android:layout_width="80dp"
        android:layout_height="@dimen/x150"
        android:background="#6646F7"
        android:textAllCaps = "false"
        android:text="@string/rename"
        android:textColor="@android:color/white"/>


    <!--    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/red_ff4a57"
            android:clickable="true">

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/point_icon_delete"
                android:gravity="center"
                android:text="删除"
                android:textColor="@android:color/white"/>
        </RelativeLayout>-->

</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
