<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/x500"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/x20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/x69"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="center_horizontal"
                android:textColor="@color/color_2B2B2B"
                android:text="@string/your_hard_disk_has_been_n_formatted" />
            <TextView
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/color_2B2B2B"
                android:text="@string/please_reboot_your_router"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:layout_marginTop="@dimen/x17"
                android:background="@color/color_f2f2f2"/>
            <TextView
                android:id="@+id/tvReboot"
                android:layout_width="@dimen/x200"
                android:text="@string/reboot"
                android:layout_marginBottom="@dimen/x10"
                android:gravity="center"
                android:textColor="@color/color_2c2c2c"
                android:textSize="17sp"
                android:layout_height="@dimen/x80" />
        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>